trying to fix the paragraph stuff not showing

--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -100,14 +100,14 @@ body {
     transform: scale(1); /* Scale it to its original size based on content */
   }
   
-.project-item .more-info p {
+/* .project-item .more-info p {
     font-size: 1.1rem;
-    /* opacity: 1; */
+    opacity: 1; 
     text-align: center;
     color: black;
     transition: opacity 0.3s ease;
   }
-  
+   */
 .project-item .more-info img {
     width: 50%; /* Adjust size of the image */
     height: auto;
